--- a/airport-ride-pooling/src/main/resources/application.properties
+++ b/airport-ride-pooling/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
 
 server.port=8080
 
